--- a/1.css
+++ b/1.css
@@ -7,6 +7,8 @@ body{
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Noto+Sans+TC:wght@700&family=Oswald:wght@200..700&display=swap');  
 @import url('https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap');
 
+
+
 .top{
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
@@ -16,14 +18,15 @@ body{
     font-size: xx-large;
     color: white;
     position: absolute;
-    top: 15px;
+    top: 5vh;
     left: 600px;
 }
 
 
 .centerleft {
-    font-family: "Poppins", sans-serif;
-    font-weight: 800;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 500;
+    font-style: italic;
     position: absolute;
     top: 300px;
     left: 250px;
@@ -73,7 +76,7 @@ a:hover {
   .contact{
     position:absolute;
     top: 45px;
-    left: 950px;
+    left: 960px;
     
 }
 
@@ -129,7 +132,6 @@ a:hover {
 .PROJ-OTW{
     position: absolute;
     top: 40%;
-
     left: 33%;
     right: 33%;
     text-align: center;
@@ -149,3 +151,314 @@ a:hover {
     bottom: 180px;
     left:610px ;
 }
+
+.gallery{
+    position:absolute;
+    top: 45px;
+    left: 1100px;
+}
+.maheb{
+    position: absolute;
+    top: 10%;
+    left:4% ;
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+  
+}
+.mahe{
+    position: absolute;
+    top: 12%;
+    left:6% ;
+  }
+  .zoom-img  img {
+    width:34%;
+    transition: all .3s ease-in-out;
+  }
+  .zoom-img1  img {
+    width: 87%;
+    transition: all .3s ease-in-out;
+  }
+  
+  .zoom-img1 img:hover   {
+    transform: scale(1.3);
+  }
+
+
+
+
+
+@media (min-width:480px){
+    .logopos1{
+        display: none;
+        position:absolute;
+        top: -2vh;
+        left: 60vw;
+        width: 0px;
+    }
+    .instapos1{
+        display: none;
+        position: absolute;
+        bottom: 300px;
+        left:400px ;
+    }
+    .twipos1{
+        display: none;
+        position: absolute;
+        bottom: 300px;
+        left:550px ;
+    }
+    
+    .lnpos1{
+        display: none;
+        position: absolute;
+        bottom: 300px;
+        left:700px ;
+    }
+    .whpos1{
+        display: none;
+        position: absolute;
+        bottom: 300px;
+        left:850px ;
+    }
+
+    .github1{
+        display: none;
+        position: absolute;
+        top: 50%;
+        left:33%;
+    }
+    .mahe1{
+        display: none;
+        position: absolute;
+        top: 11.5%;
+        left:13% ;
+      }
+
+      .maheb1{
+        display: none;
+        position: absolute;
+        top: 10%;
+        left:8% ;
+        filter: blur(8px);
+        -webkit-filter: blur(0px);
+      
+    }
+
+}
+
+@media(max-width:480px) {
+
+    .top{
+        font-family: "DM Sans", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 1000;
+        font-style: italic;
+        font-size:50px;
+        color: white;
+        position: absolute;
+        top: 1%;
+        left: 30%;
+    }
+
+
+    .centerleft {
+        font-family: "DM Sans", sans-serif;
+        font-weight: 500;
+        font-style: italic;
+        text-align:left;
+        position: absolute;
+        top: 25%;
+        left: 8%;
+        font-size: 20px;
+        width: 430px;
+        color: white;
+        
+        
+    }
+
+    .topleft {
+        position: absolute;
+        top: 12.5%;
+        left: 35%;
+        font-size: 20px;
+
+        font-weight: 400;
+        font-style: italic;
+      
+    }
+
+    .posi-photo{
+
+        position:absolute;
+        left:10%;
+        top: 35%;
+        
+        color: white;
+        
+        
+    }
+
+    
+    .logopos1{
+        position:absolute;
+        top: 8%;
+        left: 30%;
+        width: 0px;
+    }
+    
+    
+      .contact{
+        position:absolute;
+        top: 8%;
+        left:45%;
+        font-size: x-large;
+        
+    }
+    
+    .projects{
+        position:absolute;
+        top: 8%;
+        left:15%;
+        font-size: x-large;
+        
+    }
+    .gallery{
+        position:absolute;
+        top: 8%;
+        left:75%;
+        font-size: x-large;
+    }
+
+
+    .contacth{
+        position: absolute;
+        top:5%;
+        left:10%;
+        font-family: "Bowlby One", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 300;
+        font-style: normal;
+        font-size: 60px;
+    }
+    
+    .github1{
+        position: absolute;
+        top: 50%;
+        left:33%;
+    }
+
+    .PROJ-OTW{
+        position: absolute;
+        top: 40%;
+        left: 12%;
+        width: 300px;
+        font-family: "Bowlby One", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 300;
+        font-style: normal;
+        font-size: x-large;
+        color: white;
+    }
+    .mahe1{
+        position: absolute;
+        top: 11%;
+        left:13% ;
+      }
+
+      .maheb1{
+        position: absolute;
+        top: 10%;
+        left:8% ;
+        filter: blur(8px);
+        -webkit-filter: blur(0px);
+      
+    }
+
+
+    /* ###############PC icons hidding######################*/ 
+    
+    .mahe{
+        display: none;
+        position: absolute;
+        top: 12%;
+        left:6% ;
+      }
+
+      .maheb{
+        display: none;
+        position: absolute;
+        top: 10%;
+        left:4% ;
+        filter: blur(8px);
+        -webkit-filter: blur(8px);
+      
+    }
+
+    .github{
+        display: none;
+        position: absolute;
+        bottom: 180px;
+        left:610px ;
+    }
+
+    .logopos{
+        display: none;
+        position:absolute;
+        top: -2vh;
+        left: 60vw;
+        width: 0px;
+    }
+    .instapos{
+        display: none;
+        position: absolute;
+        bottom: 300px;
+        left:400px ;
+    }
+    .twipos{
+        display: none;
+        position: absolute;
+        bottom: 300px;
+        left:550px ;
+    }
+    
+    .lnpos{
+        display: none;
+        position: absolute;
+        bottom: 300px;
+        left:700px ;
+    }
+    .whpos{
+        display: none;
+        position: absolute;
+        bottom: 300px;
+        left:850px ;
+    }
+
+    
+    /* ###############mobile icons######################*/ 
+    .instapos1{
+        position: absolute;
+        top: 20%;
+        left: 40% ;
+    }
+    .twipos1{
+        position: absolute;
+        top: 40%;
+        left: 40% ;
+    }
+    
+    .lnpos1{
+        position: absolute;
+        top: 60%;
+        left:40% ;
+    }
+    .whpos1{
+        position: absolute;
+        top: 80%;
+        left:40% ;
+    }
+    
+
+}
+
+
